# ros_mwes

./: .gitignore  Dockerfile  Dockerfile.obelisk  Dockerfile.simple  Dockerfile.simple.nomount  Dockerfile.simple.nopixi  Dockerfile.simple.nopixi.nomount  README.md  docker-compose-obelisk.yml  docker-compose-simple-nomount.yml  docker-compose-simple-nopixi-nomount.yml  docker-compose-simple-nopixi.yml  docker-compose-simple.yml  docker-compose.yml  pixi.toml
test_ws/: README.md
test_ws/install/: local_setup.sh  setup.sh
test_ws/install/test_a_msgs/include/test_a_msgs/test_a_msgs/msg/: rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h
test_ws/install/test_a_msgs/share/test_a_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
test_ws/install/test_a_msgs/share/test_a_msgs/cmake/: ament_cmake_export_targets-extras.cmake  export_test_a_msgs__rosidl_generator_cExport-noconfig.cmake  export_test_a_msgs__rosidl_generator_cExport.cmake  export_test_a_msgs__rosidl_generator_pyExport-noconfig.cmake  export_test_a_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_test_a_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_test_a_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_test_a_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  test_a_msgs__rosidl_typesupport_cExport.cmake  test_a_msgs__rosidl_typesupport_cppExport.cmake  test_a_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  test_a_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  test_a_msgs__rosidl_typesupport_introspection_cppExport.cmake
test_ws/install/test_a_msgs/share/test_a_msgs/msg/: Test.idl
test_ws/install/test_pkg/lib/test_pkg/: test_node
test_ws/install/test_pkg/share/ament_index/resource_index/parent_prefix_path/: test_pkg
test_ws/install/test_pkg/share/test_pkg/: local_setup.sh  package.sh
test_ws/log/: latest_build
test_ws/src/test_msgs/test_a_msgs/: CMakeLists.txt  package.xml
test_ws/src/test_msgs/test_b_msgs/: CMakeLists.txt  package.xml
test_ws/src/test_msgs/test_b_msgs/msg/: TestB.msg
test_ws/src/test_pkg/: CMakeLists.txt  package.xml
test_ws/src/test_pkg/include/: test_node.h
test_ws/src/test_pkg/src/: test_node.cpp
(+11 files in other folders)
